gdk/fallback-c89.c: Add fallback for round()

This is essentially done by simply copying from gtk/fallback-c89.c

https://bugzilla.gnome.org/show_bug.cgi?id=694339